# knn_classifier

./: LICENSE  README.md  knn_classifier.py  main.py  pyproject.toml  setup.cfg
data/: new_test_1.txt  new_train_1.txt
knn_classifier.egg-info/: PKG-INFO  SOURCES.txt
src/knn-classifier/: knn_module.py
