[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "knn-classifier"
version = "0.0.1"
authors = [
  { name="Justin Roche", email="justinroche03@gmail.com" },
]
description = "A k-nearest neighbors classifier in Python 3.11.7"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/justinroche/knn_classifier"
Issues = "https://github.com/justinroche/knn_classifier/issues"